fix: mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@
     .container {
         width: 100% !important;
         padding: 0 0 2rem 0 !important;
+        margin: 0 !important;
 
         border-radius: 0 !important;
     }
@@ -51,6 +52,10 @@
     .aside {
         margin-left: 2rem;
         margin-right: 2rem;
+    }
+
+    .extra-space {
+        display: none !important;
     }
 }
 
